# globexhr

./: .gitignore  CHANGELOG.md  CLAUDE.md  MANUAL.md  NOTES_greythr_api.md  PLAN.md  README.md  license.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: greythr-support-questions.md
globex_hr_letters/: hooks.py  modules.txt  patches.txt
globex_hr_letters/api/: exceptions.py  zoho_sign.py
globex_hr_letters/fixtures/: client_script.json  letter_type.json
globex_hr_letters/hooks_handlers/: employee.py
globex_hr_letters/letters/: delivery.py  engine.py  merger.py  non_signing.py  pdf_check.py  pdf_convert.py
globex_hr_letters/tasks/: setup_letter_placeholders.py  stalled_signings.py
globex_hr_letters/tests/: conftest.py  test_controller_imports.py  test_engine.py  test_hr_letter_doctype.py  (+5 more)
greythr_bridge/: hooks.py  modules.txt  patches.txt
scripts/: build_offer_template.py
templates/: Consultant Offer Letter format_ Template.docx  Final Settlement.docx  Globex Digital Solutions _ Intern Offer Template.docx  Globex Digital Solutions _ Service CertificateLetter _ template.docx  Globex Digital Solutions _ Template  _ Experience Letter.docx  Globex Digital Solutions _ Template  _ Relieveing Letter.docx  Globex Digital Solutions _ Template _ Apprisal Letter.docx  Globex Digital Solutions _ Template _ Offer Letter.docx  Globex Digital Solutions _ Template _ Offer Letter1.docx  Globex Digital Solutions _ Template _ Promotion Letter.docx  Globex Digital Solutions_ Blank Letter Head _ India.docx  Globex _NDA.docx  Joining Bonus Form.docx
(+101 files in other folders)
