[project]
name = "globex_hr_letters"
authors = [{ name = "Globex Digital Solutions Pvt Ltd", email = "hr@globexdigital.ai" }]
description = "HR letters generation application for Frappe HR"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = ["docxtpl", "weasyprint"]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "globex_hr_letters"
